<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical">
		<TextView android:id="@+id/promptLbl" android:text="@string/inputPassword"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:singleLine="false"
		android:lines="2"
		></TextView>
		<EditText android:id="@+id/passwordTxt" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:inputType="textPassword"
		android:password="true"
		/>
	<CheckBox android:id="@+id/showPasswordChk" android:text="@string/showPasswordInClear"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
	<CheckBox android:id="@+id/savePasswordChk" android:text="@string/rememberPassword"
		android:layout_width="fill_parent" android:layout_height="wrap_content" 
		android:checked="true"/>

<LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="horizontal">
	<Button android:id="@+id/cancelBtn" 
		android:layout_width="80dp" 
		android:layout_height="50dp" 
		android:layout_marginRight="80dp"
		android:text="@string/cancel"/>
   <Button android:id="@+id/okBtn" android:layout_width="80dp" android:layout_height="50dp" android:text="@string/ok"/>
  
</LinearLayout>	             
          
</LinearLayout>
