<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="10dp">
	
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:stretchColumns="1" android:layout_weight="1">
		<TableRow>
		<TextView android:gravity="center" android:text="@string/ab_name"></TextView>
		<EditText android:id="@+id/ead_nameTxt"></EditText>
		</TableRow>
	<TableRow>
	<TextView android:gravity="center" android:text="@string/ab_address"></TextView>
	<EditText android:id="@+id/ead_addressTxt"></EditText>
	</TableRow>
	</TableLayout>	
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:gravity="right" android:layout_gravity="bottom">
	<Button android:id="@+id/ead_okBtn" 
		android:layout_width="80dp" android:layout_height="50dp"
		android:gravity="center" android:text="@string/ok"
		android:padding="10dp"></Button>
		<Button android:id="@+id/ead_cancelBtn" 
		android:layout_width="80dp" android:layout_height="50dp"
		android:gravity="center" android:text="@string/cancel"
		android:padding="10dp"></Button>
		</LinearLayout>
</LinearLayout>
	